// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceToolbar /> should not render creation button when [canCreate=false] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[MockFunction]}
    placeholder="Reference name"
    value=""
  />
</Toolbar>
`;

exports[`<ReferenceToolbar /> should render creation button when [canCreate=true] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[MockFunction]}
    placeholder="Reference name"
    value=""
  />
  <LinkButton
    tip="Create"
    to={
      Object {
        "state": Object {
          "createReference": true,
          "newReference": true,
        },
      }
    }
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="plus-square fa-fw"
    />
  </LinkButton>
</Toolbar>
`;

exports[`<ReferenceToolbar /> should render when [term='foo'] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[MockFunction]}
    placeholder="Reference name"
    value="foo"
  />
  <LinkButton
    tip="Create"
    to={
      Object {
        "state": Object {
          "createReference": true,
          "newReference": true,
        },
      }
    }
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="plus-square fa-fw"
    />
  </LinkButton>
</Toolbar>
`;
